compiler/tigergrm.output
   0  $accept : %entry% $end

   1  prog : exp EOF

   2  exp : NRO
   3      | PI PD
   4      | NIL
   5      | LITERAL
   6      | BREAK
   7      | l_value
   8      | l_value DOSPIG exp
   9      | PI exp PCOMA explist PD
  10      | exp PIPE exp
  11      | exp AMPER exp
  12      | exp IGUAL exp
  13      | exp MENOR exp
  14      | exp MENIG exp
  15      | exp MAYOR exp
  16      | exp MAYIG exp
  17      | exp DIST exp
  18      | exp MAS exp
  19      | exp MENOS exp
  20      | exp POR exp
  21      | exp DIV exp
  22      | MENOS exp
  23      | PI exp PD
  24      | id PI args PD
  25      | IF exp THEN exp
  26      | IF exp THEN exp ELSE exp
  27      | WHILE exp DO exp
  28      | FOR id DOSPIG exp TO exp DO exp
  29      | LET decs IN END
  30      | LET decs IN exp END
  31      | LET decs IN exp PCOMA explist END
  32      | l_value CI exp CD OF exp
  33      | id LI rec_fields LD

  34  explist : exp PCOMA explist
  35          | exp

  36  rec_fields : id IGUAL exp COMA rec_fields
  37             | id IGUAL exp
  38             |

  39  decs : dec decs
  40       |

  41  dec : TYPE id IGUAL ty
  42      | vardec
  43      | fundec

  44  ty : id
  45     | LI tyflds LD
  46     | ARRAY OF id

  47  id : ID

  48  tyflds : tyfield COMA tyflds
  49         | tyfield
  50         |

  51  vardec : VAR id DOSPIG exp
  52         | VAR id DOSP id DOSPIG exp

  53  fundec : FUNCTION id PI tyflds PD IGUAL exp
  54         | FUNCTION id PI tyflds PD DOSP id IGUAL exp

  55  tyfield : id DOSP id

  56  args : exp COMA args
  57       | exp
  58       |

  59  l_value : id
  60          | l_value PTO id
  61          | l_value CI exp CD

  62  %entry% : '\001' prog

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . prog  (62)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	prog  goto 14
	id  goto 15
	exp  goto 16
	l_value  goto 17


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	exp : BREAK .  (6)

	.  reduce 6


state 4
	exp : FOR . id DOSPIG exp TO exp DO exp  (28)

	ID  shift 5
	.  error

	id  goto 18


state 5
	id : ID .  (47)

	.  reduce 47


state 6
	exp : IF . exp THEN exp  (25)
	exp : IF . exp THEN exp ELSE exp  (26)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 19
	l_value  goto 17


state 7
	exp : LET . decs IN END  (29)
	exp : LET . decs IN exp END  (30)
	exp : LET . decs IN exp PCOMA explist END  (31)
	decs : .  (40)

	FUNCTION  shift 20
	TYPE  shift 21
	VAR  shift 22
	IN  reduce 40

	dec  goto 23
	vardec  goto 24
	fundec  goto 25
	decs  goto 26


state 8
	exp : LITERAL .  (5)

	.  reduce 5


state 9
	exp : MENOS . exp  (22)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 27
	l_value  goto 17


state 10
	exp : NIL .  (4)

	.  reduce 4


state 11
	exp : NRO .  (2)

	.  reduce 2


state 12
	exp : PI . PD  (3)
	exp : PI . exp PCOMA explist PD  (9)
	exp : PI . exp PD  (23)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PD  shift 28
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 29
	l_value  goto 17


state 13
	exp : WHILE . exp DO exp  (27)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 30
	l_value  goto 17


state 14
	%entry% : '\001' prog .  (62)

	.  reduce 62


state 15
	exp : id . PI args PD  (24)
	exp : id . LI rec_fields LD  (33)
	l_value : id .  (59)

	LI  shift 31
	PI  shift 32
	AMPER  reduce 59
	CD  reduce 59
	CI  reduce 59
	COMA  reduce 59
	DIST  reduce 59
	DIV  reduce 59
	DO  reduce 59
	DOSPIG  reduce 59
	ELSE  reduce 59
	END  reduce 59
	EOF  reduce 59
	FUNCTION  reduce 59
	IGUAL  reduce 59
	IN  reduce 59
	LD  reduce 59
	MAS  reduce 59
	MAYIG  reduce 59
	MAYOR  reduce 59
	MENIG  reduce 59
	MENOR  reduce 59
	MENOS  reduce 59
	PCOMA  reduce 59
	PD  reduce 59
	PIPE  reduce 59
	POR  reduce 59
	PTO  reduce 59
	THEN  reduce 59
	TO  reduce 59
	TYPE  reduce 59
	VAR  reduce 59


state 16
	prog : exp . EOF  (1)
	exp : exp . PIPE exp  (10)
	exp : exp . AMPER exp  (11)
	exp : exp . IGUAL exp  (12)
	exp : exp . MENOR exp  (13)
	exp : exp . MENIG exp  (14)
	exp : exp . MAYOR exp  (15)
	exp : exp . MAYIG exp  (16)
	exp : exp . DIST exp  (17)
	exp : exp . MAS exp  (18)
	exp : exp . MENOS exp  (19)
	exp : exp . POR exp  (20)
	exp : exp . DIV exp  (21)

	AMPER  shift 33
	DIST  shift 34
	DIV  shift 35
	EOF  shift 36
	IGUAL  shift 37
	MAS  shift 38
	MAYIG  shift 39
	MAYOR  shift 40
	MENIG  shift 41
	MENOR  shift 42
	MENOS  shift 43
	PIPE  shift 44
	POR  shift 45
	.  error


state 17
	exp : l_value .  (7)
	exp : l_value . DOSPIG exp  (8)
	exp : l_value . CI exp CD OF exp  (32)
	l_value : l_value . PTO id  (60)
	l_value : l_value . CI exp CD  (61)

	CI  shift 46
	DOSPIG  shift 47
	PTO  shift 48
	AMPER  reduce 7
	CD  reduce 7
	COMA  reduce 7
	DIST  reduce 7
	DIV  reduce 7
	DO  reduce 7
	ELSE  reduce 7
	END  reduce 7
	EOF  reduce 7
	FUNCTION  reduce 7
	IGUAL  reduce 7
	IN  reduce 7
	LD  reduce 7
	MAS  reduce 7
	MAYIG  reduce 7
	MAYOR  reduce 7
	MENIG  reduce 7
	MENOR  reduce 7
	MENOS  reduce 7
	PCOMA  reduce 7
	PD  reduce 7
	PIPE  reduce 7
	POR  reduce 7
	THEN  reduce 7
	TO  reduce 7
	TYPE  reduce 7
	VAR  reduce 7


state 18
	exp : FOR id . DOSPIG exp TO exp DO exp  (28)

	DOSPIG  shift 49
	.  error


state 19
	exp : exp . PIPE exp  (10)
	exp : exp . AMPER exp  (11)
	exp : exp . IGUAL exp  (12)
	exp : exp . MENOR exp  (13)
	exp : exp . MENIG exp  (14)
	exp : exp . MAYOR exp  (15)
	exp : exp . MAYIG exp  (16)
	exp : exp . DIST exp  (17)
	exp : exp . MAS exp  (18)
	exp : exp . MENOS exp  (19)
	exp : exp . POR exp  (20)
	exp : exp . DIV exp  (21)
	exp : IF exp . THEN exp  (25)
	exp : IF exp . THEN exp ELSE exp  (26)

	AMPER  shift 33
	DIST  shift 34
	DIV  shift 35
	IGUAL  shift 37
	MAS  shift 38
	MAYIG  shift 39
	MAYOR  shift 40
	MENIG  shift 41
	MENOR  shift 42
	MENOS  shift 43
	PIPE  shift 44
	POR  shift 45
	THEN  shift 50
	.  error


state 20
	fundec : FUNCTION . id PI tyflds PD IGUAL exp  (53)
	fundec : FUNCTION . id PI tyflds PD DOSP id IGUAL exp  (54)

	ID  shift 5
	.  error

	id  goto 51


state 21
	dec : TYPE . id IGUAL ty  (41)

	ID  shift 5
	.  error

	id  goto 52


state 22
	vardec : VAR . id DOSPIG exp  (51)
	vardec : VAR . id DOSP id DOSPIG exp  (52)

	ID  shift 5
	.  error

	id  goto 53


state 23
	decs : dec . decs  (39)
	decs : .  (40)

	FUNCTION  shift 20
	TYPE  shift 21
	VAR  shift 22
	IN  reduce 40

	dec  goto 23
	vardec  goto 24
	fundec  goto 25
	decs  goto 54


state 24
	dec : vardec .  (42)

	.  reduce 42


state 25
	dec : fundec .  (43)

	.  reduce 43


state 26
	exp : LET decs . IN END  (29)
	exp : LET decs . IN exp END  (30)
	exp : LET decs . IN exp PCOMA explist END  (31)

	IN  shift 55
	.  error


state 27
	exp : exp . PIPE exp  (10)
	exp : exp . AMPER exp  (11)
	exp : exp . IGUAL exp  (12)
	exp : exp . MENOR exp  (13)
	exp : exp . MENIG exp  (14)
	exp : exp . MAYOR exp  (15)
	exp : exp . MAYIG exp  (16)
	exp : exp . DIST exp  (17)
	exp : exp . MAS exp  (18)
	exp : exp . MENOS exp  (19)
	exp : exp . POR exp  (20)
	exp : exp . DIV exp  (21)
	exp : MENOS exp .  (22)

	DIV  shift 35
	POR  shift 45
	AMPER  reduce 22
	CD  reduce 22
	COMA  reduce 22
	DIST  reduce 22
	DO  reduce 22
	ELSE  reduce 22
	END  reduce 22
	EOF  reduce 22
	FUNCTION  reduce 22
	IGUAL  reduce 22
	IN  reduce 22
	LD  reduce 22
	MAS  reduce 22
	MAYIG  reduce 22
	MAYOR  reduce 22
	MENIG  reduce 22
	MENOR  reduce 22
	MENOS  reduce 22
	PCOMA  reduce 22
	PD  reduce 22
	PIPE  reduce 22
	THEN  reduce 22
	TO  reduce 22
	TYPE  reduce 22
	VAR  reduce 22


state 28
	exp : PI PD .  (3)

	.  reduce 3


state 29
	exp : PI exp . PCOMA explist PD  (9)
	exp : exp . PIPE exp  (10)
	exp : exp . AMPER exp  (11)
	exp : exp . IGUAL exp  (12)
	exp : exp . MENOR exp  (13)
	exp : exp . MENIG exp  (14)
	exp : exp . MAYOR exp  (15)
	exp : exp . MAYIG exp  (16)
	exp : exp . DIST exp  (17)
	exp : exp . MAS exp  (18)
	exp : exp . MENOS exp  (19)
	exp : exp . POR exp  (20)
	exp : exp . DIV exp  (21)
	exp : PI exp . PD  (23)

	AMPER  shift 33
	DIST  shift 34
	DIV  shift 35
	IGUAL  shift 37
	MAS  shift 38
	MAYIG  shift 39
	MAYOR  shift 40
	MENIG  shift 41
	MENOR  shift 42
	MENOS  shift 43
	PCOMA  shift 56
	PD  shift 57
	PIPE  shift 44
	POR  shift 45
	.  error


state 30
	exp : exp . PIPE exp  (10)
	exp : exp . AMPER exp  (11)
	exp : exp . IGUAL exp  (12)
	exp : exp . MENOR exp  (13)
	exp : exp . MENIG exp  (14)
	exp : exp . MAYOR exp  (15)
	exp : exp . MAYIG exp  (16)
	exp : exp . DIST exp  (17)
	exp : exp . MAS exp  (18)
	exp : exp . MENOS exp  (19)
	exp : exp . POR exp  (20)
	exp : exp . DIV exp  (21)
	exp : WHILE exp . DO exp  (27)

	AMPER  shift 33
	DIST  shift 34
	DIV  shift 35
	DO  shift 58
	IGUAL  shift 37
	MAS  shift 38
	MAYIG  shift 39
	MAYOR  shift 40
	MENIG  shift 41
	MENOR  shift 42
	MENOS  shift 43
	PIPE  shift 44
	POR  shift 45
	.  error


state 31
	exp : id LI . rec_fields LD  (33)
	rec_fields : .  (38)

	ID  shift 5
	LD  reduce 38

	id  goto 59
	rec_fields  goto 60


state 32
	exp : id PI . args PD  (24)
	args : .  (58)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	PD  reduce 58

	id  goto 15
	exp  goto 61
	args  goto 62
	l_value  goto 17


state 33
	exp : exp AMPER . exp  (11)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 63
	l_value  goto 17


state 34
	exp : exp DIST . exp  (17)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 64
	l_value  goto 17


state 35
	exp : exp DIV . exp  (21)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 65
	l_value  goto 17


state 36
	prog : exp EOF .  (1)

	.  reduce 1


state 37
	exp : exp IGUAL . exp  (12)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 66
	l_value  goto 17


state 38
	exp : exp MAS . exp  (18)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 67
	l_value  goto 17


state 39
	exp : exp MAYIG . exp  (16)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 68
	l_value  goto 17


state 40
	exp : exp MAYOR . exp  (15)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 69
	l_value  goto 17


state 41
	exp : exp MENIG . exp  (14)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 70
	l_value  goto 17


state 42
	exp : exp MENOR . exp  (13)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 71
	l_value  goto 17


state 43
	exp : exp MENOS . exp  (19)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 72
	l_value  goto 17


state 44
	exp : exp PIPE . exp  (10)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 73
	l_value  goto 17


state 45
	exp : exp POR . exp  (20)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 74
	l_value  goto 17


state 46
	exp : l_value CI . exp CD OF exp  (32)
	l_value : l_value CI . exp CD  (61)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 75
	l_value  goto 17


state 47
	exp : l_value DOSPIG . exp  (8)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 76
	l_value  goto 17


state 48
	l_value : l_value PTO . id  (60)

	ID  shift 5
	.  error

	id  goto 77


state 49
	exp : FOR id DOSPIG . exp TO exp DO exp  (28)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 78
	l_value  goto 17


state 50
	exp : IF exp THEN . exp  (25)
	exp : IF exp THEN . exp ELSE exp  (26)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 79
	l_value  goto 17


state 51
	fundec : FUNCTION id . PI tyflds PD IGUAL exp  (53)
	fundec : FUNCTION id . PI tyflds PD DOSP id IGUAL exp  (54)

	PI  shift 80
	.  error


state 52
	dec : TYPE id . IGUAL ty  (41)

	IGUAL  shift 81
	.  error


state 53
	vardec : VAR id . DOSPIG exp  (51)
	vardec : VAR id . DOSP id DOSPIG exp  (52)

	DOSP  shift 82
	DOSPIG  shift 83
	.  error


state 54
	decs : dec decs .  (39)

	.  reduce 39


state 55
	exp : LET decs IN . END  (29)
	exp : LET decs IN . exp END  (30)
	exp : LET decs IN . exp PCOMA explist END  (31)

	BREAK  shift 3
	END  shift 84
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 85
	l_value  goto 17


state 56
	exp : PI exp PCOMA . explist PD  (9)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 86
	explist  goto 87
	l_value  goto 17


state 57
	exp : PI exp PD .  (23)

	.  reduce 23


state 58
	exp : WHILE exp DO . exp  (27)

	BREAK  shift 3
	FOR  shift 4
	ID  shift 5
	IF  shift 6
	LET  shift 7
	LITERAL  shift 8
	MENOS  shift 9
	NIL  shift 10
	NRO  shift 11
	PI  shift 12
	WHILE  shift 13
	.  error

	id  goto 15
	exp  goto 88
	l_value  goto 17


state 59
	rec_fields : id . IGUAL exp COMA rec_fields  (36)
	rec_fields : id . IGUAL exp  (37)

	IGUAL  shift 89
	.  error


state 60
	exp : id LI rec_fields . LD  (33)

	LD  shift 90
	.  error


state 61
	exp : exp . PIPE exp  (10)
	exp : exp . AMPER exp  (11)
	exp : exp . IGUAL exp  (12)
	exp : exp . MENOR exp  (13)
	exp : exp . MENIG exp  (14)
	exp : exp . MAYOR exp  (15)
	exp : exp . MAYIG exp  (16)
	exp : exp . DIST exp  (17)
	exp : exp . MAS exp  (18)
	exp : exp . MENOS exp  (19)
	exp : exp . POR exp  (20)
	exp : exp . DIV exp  (21)
	args : exp . COMA args  (56)
	args : exp .  (57)

	AMPER  shift 33
	COMA  shift 91
	DIST  shift 34
	DIV  shift 35
	IGUAL  shift 37
	MAS  shift 38
	MAYIG  shift 39
	MAYOR  shift 40
	MENIG  shift 41
	MENOR  shift 42
	MENOS  shift 43
	PIPE  shift 44
	POR  shift 45
	PD  reduce 57


state 62
	exp : id PI args . PD  (24)

	PD  shift 92
	.  error


state 63
	exp : exp . PIPE exp  (10)
	exp : exp . AMPER exp  (11)
	exp : exp AMPER exp .  (11)
	exp : exp . IGUAL exp  (12)
	exp : exp . MENOR exp  (13)
	exp : exp . MENIG exp  (14)
	exp : exp . MAYOR exp  (15)
	exp : exp . MAYIG exp  (16)
	exp : exp . DIST exp  (17)
	exp : exp . MAS exp  (18)
	exp : exp . MENOS exp  (19)
	exp : exp . POR exp  (20)
	exp : exp . DIV exp  (21)

	DIST  shift 34
	DIV  shift 35
	IGUAL  shift 37
	MAS  shift 38
	MAYIG  shift 39
	MAYOR  shift 40
	MENIG  shift 41
	MENOR  shift 42
	MENOS  shift 43
	POR  shift 45
	AMPER  reduce 11
	CD  reduce 11
	COMA  reduce 11
	DO  reduce 11
	ELSE  reduce 11
	END  reduce 11
	EOF  reduce 11
	FUNCTION  reduce 11
	IN  reduce 11
	LD  reduce 11
	PCOMA  reduce 11
	PD  reduce 11
	PIPE  reduce 11
	THEN  reduce 11
	TO  reduce 11
	TYPE  reduce 11
	VAR  reduce 11


state 64
	exp : exp . PIPE exp  (10)
	exp : exp . AMPER exp  (11)
	exp : exp . IGUAL exp  (12)
	exp : exp . MENOR exp  (13)
	exp : exp . MENIG exp  (14)
	exp : exp . MAYOR exp  (15)
	exp : exp . MAYIG exp  (16)
	exp : exp . DIST exp  (17)
	exp : exp DIST exp .  (17)
	exp : exp . MAS exp  (18)
	exp : exp . MENOS exp  (19)
	exp : exp . POR exp  (20)
	exp : exp . DIV exp  (21)

	DIV  shift 35
	MAS  shift 38
	MENOS  shift 43
	POR  shift 45
	AMPER  reduce 17
	CD  reduce 17
	COMA  reduce 17
	DO  reduce 17
	ELSE  reduce 17
	END  reduce 17
	EOF  reduce 17
	FUNCTION  reduce 17
	IN  reduce 17
	LD  reduce 17
	PCOMA  reduce 17
	PD  reduce 17
	PIPE  reduce 17
	THEN  reduce 17
	TO  reduce 17
	TYPE  reduce 17
	VAR  reduce 17


state 65
	exp : exp . PIPE exp  (10)
	exp : exp . AMPER exp  (11)
	exp : exp . IGUAL exp  (12)
	exp : exp . MENOR exp  (13)
	exp : exp . MENIG exp  (14)
	exp : exp . MAYOR exp  (15)
	exp : exp . MAYIG exp  (16)
	exp : exp . DIST exp  (17)
	exp : exp . MAS exp  (18)
	exp : exp . MENOS exp  (19)
	exp : exp . POR exp  (20)
	exp : exp . DIV exp  (21)
	exp : exp DIV exp .  (21)

	AMPER  reduce 21
	CD  reduce 21
	COMA  reduce 21
	DIST  reduce 21
	DIV  reduce 21
	DO  reduce 21
	ELSE  reduce 21
	END  reduce 21
	EOF  reduce 21
	FUNCTION  reduce 21
	IGUAL  reduce 21
	IN  reduce 21
	LD  reduce 21
	MAS  reduce 21
	MAYIG  reduce 21
	MAYOR  reduce 21
	MENIG  reduce 21
	MENOR  reduce 21
	MENOS  reduce 21
	PCOMA  reduce 21
	PD  reduce 21
	PIPE  reduce 21
	POR  reduce 21
	THEN  reduce 21
	TO  reduce 21
	TYPE  reduce 21
	VAR  reduce 21

